# 02_cars

./: .coverage  .env  .gitignore  Pipfile  TODO.txt  copilotideas.txt  docker-compose.yml  main.py  package-lock.json  pyproject.toml
Frontend/: App.css
app/: main.py
app/data_loader/: json_loader.py
app/model/: car.py
app/persistance/: connection.py  crud.py  database.py  db_config.json
app/resources/: cars.json
app/service/: car_service.py  types.py
app/validator/: basic_validator.py  validator.py  validator_legacy.py
data_loader/: json_loader.py
models/: car.py  validator.py
resources/: cars.json  test_car.json
services/: car_service.py  types.py
tests/: data.py
tests/data/: car_obj_data.py  validator_obj_data.py
tests/data_loader/json_loader/: test_json_loader_get_cars.py
tests/legacy_tests/: model_validator_basic_data.py  model_validator_car_body.py  model_validator_engine.py  model_validator_wheel.py  old_test_car_services.py  old_test_validators.py
tests/model/basic_validators/: test_basic_validator_match_regex.py  test_basic_validator_value_in_between_range.py
tests/model/car/: 1_examples.py  test_model_car_has_body_color.py  test_model_car_has_body_type.py  test_model_car_has_component.py  test_model_car_has_engine_type.py  test_model_car_has_mileage_between.py  test_model_car_has_power_between.py  test_model_car_has_price_between.py  test_model_car_has_tyre_type.py
tests/model/validator/: test_model_validator_basic_data.py  test_model_validator_body_data.py  (+4 more)
tests/test_files/: test_car.json  wrong_format.json
